--- a/index.html
+++ b/index.html
@@ -1,12 +1,14 @@
+
 <!DOCTYPE html>
 <html>
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width">
-    <title>repl.it</title>
+    <title>Hello, World!</title>
     <link href="style.css" rel="stylesheet" type="text/css" />
-  </head>
-  <body>
+
+  </head> <h1>Hello, World!</h1>
+  <body> 
     <script src="script.js"></script>
   </body>
 </html>
